--- a/style.css
+++ b/style.css
@@ -2,3 +2,10 @@ body{
     background-color: black;
     color: white;
 }
+
+section{
+    background-color: blue;
+    padding-top: 80px;
+    padding-bottom: 80px;
+
+}
