--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ section{
     padding-top: 80px;
     padding-bottom: 80px;
     display: flex;
+    justify-content: center;
 
 }
 
@@ -18,4 +19,5 @@ section{
 header{ 
     margin: 5%;
     font-size: 10px;
+    text-align: center;
 }
