--- a/style.css
+++ b/style.css
@@ -4,20 +4,17 @@ body{
 }
 
 section{
-    background-color: blue;
+    background-color: rgb(59, 59, 245);
     padding-top: 80px;
     padding-bottom: 80px;
     display: flex;
     justify-content: center;
-
 }
-
-.chamadatexto{
+.chamada-texto{
     margin: 5%;
 }
-
-header{ 
+header{
     margin: 5%;
-    font-size: 10px;
+    font-size: 20px;
     text-align: center;
 }
